--- a/FlightControlWeb/FlightControlWeb.csproj
+++ b/FlightControlWeb/FlightControlWeb.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\Bootstrap\css\bootstrap.min.css" />
+    <None Include="wwwroot\Bootstrap\js\bootstrap.min.js" />
+    <None Include="wwwroot\Bootstrap\js\jquery-3.4.1.slim.min.js" />
+    <None Include="wwwroot\Bootstrap\js\popper.min.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.4.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
   </ItemGroup>
