--- a/FlightControlWeb/Properties/launchSettings.json
+++ b/FlightControlWeb/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:63497",
-      "sslPort": 44306
+      "applicationUrl": "http://localhost:63495",
+      "sslPort": 44399
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -17,12 +17,12 @@
       }
     },
     "FlightControlWeb": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:5001"
+        "commandName": "Project",
+        "launchBrowser": true,
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Development"
+        },
+        "applicationUrl": "https://localhost:5001;https://localhost:5002"
     }
   }
 }
